2015-03-17  Kaz Kylheku  <kaz@kylheku.com>

	* txr.c (help): Added missing documentation for -e and -p.
	Also documented -P.
	(txr_main): New option implemented, -P.

	* txr.1: Document -P, and clean up -e and -p documentation.

2015-03-11  Kaz Kylheku  <kaz@kylheku.com>

	Version 105.

	* RELNOTES: Updated.

	* configure, txr.1: Bumped version.

	* share/txr/stdlib/ver.txr: Likewise.

	* txr.vim, tl.vim: Regenerated.

2015-03-11  Kaz Kylheku  <kaz@kylheku.com>

	* stream.c (run): In Windows version, fix nasty corruption bug:
	we were freeing C strings that were not duplicated, but only borrowed
	from string objects.

2015-03-11  Kaz Kylheku  <kaz@kylheku.com>

	* stream.c (open_process, run): Eliminate utf8name local variable
	and associated memory leak. Correctly allocate only nargs + 1 elements
	for argv array, not nargs + 2.

2015-03-10  Kaz Kylheku  <kaz@kylheku.com>

	* sysif.c (mkdir_nothrow_exists): New static function.
	(ensure_dir): New function.
	(sysif_init): ensure_dir registered as intrinsic.

	* txr.1: ensure_dir documented.

2015-02-25  Kaz Kylheku  <kaz@kylheku.com>

	* parser.c (open_txr_file, regex_parse, lisp_parse): Functions
	moved here from parser.l.

	* parser.l (open_txr_file, regex_parse, lisp_parse): Functions
	moved from here to parser.c.

2015-02-25  Kaz Kylheku  <kaz@kylheku.com>

	* Makefile (OBJS): Add parser.o.

	* parser.h (parser_s): Declared.
	(parse_init): Declaration removed.
	(parser_l_init): Declared.

	* parser.l (parse_init): Function renamed to parser_l_init.

	* parser.c: New file.

2015-02-25  Kaz Kylheku  <kaz@kylheku.com>

	New ignerr macro.

	* eval.c (me_ignerr): New static function.
	(eval_init): Registered ignerr macro.

	* txr.1: Documented.

	* tl.vim, txr.vim: Regenerated.

2015-02-25  Kaz Kylheku  <kaz@kylheku.com>

	Introducing persistent error state on streams.

	* lib.c (cobj_ops): New function.

	* lib.h (cobj_ops): Declared.

	* stream.c (null_ops): Initializer updated.