@@ -19063,6 +19063,7 @@ The
 .code int-str
 function converts a string of digits in the specified
 radix to an integer value. If the radix isn't specified, it defaults to 10.
+Otherwise it must be an integer in the range 2 to 36.
 For radices above 10, letters of the alphabet
 are used for digits:
 .code A
